force-app/main/default/objects/VisualAntidote__Alert_Template__c/fields/VisualAntidote__Body__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>