force-app/main/default/objects/VisualAntidote__Alert_Template__c/fields/VisualAntidote__Category__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad-hoc</fullName>
                <default>true</default>
                <label>Ad-hoc</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>