force-app/main/default/objects/VisualAntidote__Alert_Template__c/fields/VisualAntidote__Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>