force-app/main/default/objects/VisualAntidote__Alert_Template__c/listViews/VisualAntidote__All.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>VisualAntidote__Category__c</columns>
    <columns>VisualAntidote__Name__c</columns>
    <columns>VisualAntidote__Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>