force-app/main/default/objects/VisualAntidote__Alert_Template__c/listViews/VisualAntidote__All1.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All1</fullName>
    <columns>NAME</columns>
    <columns>VisualAntidote__Body__c</columns>
    <columns>VisualAntidote__Category__c</columns>
    <columns>VisualAntidote__Name__c</columns>
    <columns>VisualAntidote__Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>